istio-basics/workspace/traffic-management/request-routing/virtualservice1.yaml
# See more at https://istio.io/latest/docs/tasks/traffic-management/request-routing/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - bookinfo.com
  http:
  - match:
    - uri:
        prefix: /reviews
    route:
    - destination:
        host: reviews
  - match:
    - uri:
        prefix: /ratings
    route:
    - destination:
        host: ratings
