istio-basics/workspace/traffic-management/request-routing/virtualservice2.yaml
# See more at https://istio.io/latest/docs/tasks/traffic-management/traffic-shifting/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: reviews
        subset: v2
  - route:
    - destination:
        host: reviews
        subset: v3
