istio-basics/workspace/traffic-management/request-routing/virtualservice3.yaml
# See more at https://istio.io/latest/docs/tasks/traffic-management/traffic-shifting/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
      weight: 99
    - destination:
        host: reviews
        subset: v2
      weight: 1
